--- a/dataset/create_face_dataset.ipynb
+++ b/dataset/create_face_dataset.ipynb
@@ -122,20 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-32ae11854de2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDATA_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mORIGINAL_VIDEOS_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFAKE_VIDEOS_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFACES_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFACES_REAL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFACES_FAKE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
-    "DATA_FOLDER = os.path.join(\"..\", \"data\")\n",
-    "ORIGINAL_VIDEOS_FOLDER = os.path.join(\n",
-    "    DATA_FOLDER, \"original_sequences\", \"actors\", \"c40\", \"videos\"\n",
-    ")\n",
-    "FAKE_VIDEOS_FOLDER = os.path.join(\n",
-    "    DATA_FOLDER, \"manipulated_sequences\", \"DeepFakeDetection\", \"c40\", \"videos\"\n",
-    ")\n",
-    "FACES_FOLDER = os.path.join(DATA_FOLDER, \"faces\")\n",
-    "FACES_REAL = os.path.join(FACES_FOLDER, \"real\")\n",
-    "FACES_FAKE = os.path.join(FACES_FOLDER, \"fake\")"
+    "from constants import DATA_FOLDER, ORIGINAL_VIDEOS_FOLDER, FAKE_VIDEOS_FOLDER, FACES_FOLDER, FACES_REAL, FACES_FAKE"
    ]
   },
   {
