Creating CSV files to store the image names and the label

--- a/dataset/create_face_dataset.ipynb
+++ b/dataset/create_face_dataset.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,23 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-32ae11854de2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDATA_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mORIGINAL_VIDEOS_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFAKE_VIDEOS_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFACES_FOLDER\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFACES_REAL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFACES_FAKE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from constants import DATA_FOLDER, ORIGINAL_VIDEOS_FOLDER, FAKE_VIDEOS_FOLDER, FACES_FOLDER, FACES_REAL, FACES_FAKE"
+    "from constants import ORIGINAL_VIDEOS_FOLDER, FAKE_VIDEOS_FOLDER, FACES_FOLDER, FACES_REAL, FACES_FAKE"
    ]
   },
   {
@@ -367,6 +355,124 @@
     "# Store the faces of the fake videos:\n",
     "save_face(FAKE_VIDEOS_FOLDER, FAKE_VIDEOS, FACES_FAKE)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the images names with their label as a csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_faces = os.listdir(FACES_REAL)\n",
+    "real_faces = np.array(list(zip(real_faces, [\"real\"]*len(real_faces))))\n",
+    "fake_faces = os.listdir(FACES_FAKE)\n",
+    "fake_faces = np.array(list(zip(fake_faces, [\"fake\"]*len(fake_faces))))\n",
+    "\n",
+    "faces = np.concatenate((real_faces, fake_faces))\n",
+    "\n",
+    "# shuffle the data\n",
+    "np.random.shuffle(faces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(faces, columns=[\"name\", \"label\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15_07__exit_phone_room__UGGRZJ60_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16_17__outside_talking_pan_laughing__EWJJTZHY_...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20_13__walk_down_hall_angry__HQHYKNGK_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14_21__podium_speech_happy__IRKML4J0_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15_02__podium_speech_happy__XNJIS4S3_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                name label\n",
+       "0          15_07__exit_phone_room__UGGRZJ60_face.png  fake\n",
+       "1  16_17__outside_talking_pan_laughing__EWJJTZHY_...  fake\n",
+       "2     20_13__walk_down_hall_angry__HQHYKNGK_face.png  fake\n",
+       "3      14_21__podium_speech_happy__IRKML4J0_face.png  fake\n",
+       "4      15_02__podium_speech_happy__XNJIS4S3_face.png  fake"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -388,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
