Storing the CSV file

--- a/dataset/create_face_dataset.ipynb
+++ b/dataset/create_face_dataset.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -422,27 +422,152 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>15_07__exit_phone_room__UGGRZJ60_face.png</td>\n",
+       "      <td>12_06__talking_against_wall__0VR4Y891_face.png</td>\n",
        "      <td>fake</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>16_17__outside_talking_pan_laughing__EWJJTZHY_...</td>\n",
+       "      <td>23_19__walking_outside_cafe_disgusted__WHQ1229...</td>\n",
        "      <td>fake</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20_13__walk_down_hall_angry__HQHYKNGK_face.png</td>\n",
+       "      <td>03_18__walking_and_outside_surprised__22UBC0BS...</td>\n",
        "      <td>fake</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>14_21__podium_speech_happy__IRKML4J0_face.png</td>\n",
+       "      <td>23_24__kitchen_pan__YR5OVD4S_face.png</td>\n",
        "      <td>fake</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>15_02__podium_speech_happy__XNJIS4S3_face.png</td>\n",
+       "      <td>06_25__outside_talking_still_laughing__MI9BDQ7...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13_02__secret_conversation__PLNVLO74_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>24_19__podium_speech_happy__OF8LF68K_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27_02__hugging_happy__UGO2181S_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>20_14__podium_speech_happy__B014BKVO_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>12_07__walking_and_outside_surprised__0VN0A2T3...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>07_03__talking_angry_couch__WPT3Z2KN_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>04_21__talking_against_wall__NRI4PHWP_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>03_07__hugging_happy__BKLOCI1M_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>21_02__outside_talking_still_laughing__Z0XHPQA...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14_20__exit_phone_room__B014BKVO_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>20_14__hugging_happy__B014BKVO_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>03_14__walking_down_street_outside_angry__H0VQ...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>01_27__outside_talking_pan_laughing__S2YCUY48_...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>03_07__walking_and_outside_surprised__IFSURI9X...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>07_03__kitchen_pan__PWXXULHR_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>07_03__podium_speech_happy__IFSURI9X_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>14_13__walking_outside_cafe_disgusted__KMQ3AW6...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>21_07__walking_down_indoor_hall_disgust__MKU99...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>06_12__outside_talking_pan_laughing__3K21NFNM_...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>07_03__hugging_happy__IFSURI9X_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>27__podium_speech_happy_face.png</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>15_02__outside_talking_pan_laughing__I8G2LWD1_...</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>20_26__podium_speech_happy__1UEDQ3GY_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>13_25__hugging_happy__7YMTAF29_face.png</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>03_15__kitchen_pan__5C1OMK8W_face.png</td>\n",
        "      <td>fake</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -450,29 +575,56 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                name label\n",
-       "0          15_07__exit_phone_room__UGGRZJ60_face.png  fake\n",
-       "1  16_17__outside_talking_pan_laughing__EWJJTZHY_...  fake\n",
-       "2     20_13__walk_down_hall_angry__HQHYKNGK_face.png  fake\n",
-       "3      14_21__podium_speech_happy__IRKML4J0_face.png  fake\n",
-       "4      15_02__podium_speech_happy__XNJIS4S3_face.png  fake"
+       "                                                 name label\n",
+       "0      12_06__talking_against_wall__0VR4Y891_face.png  fake\n",
+       "1   23_19__walking_outside_cafe_disgusted__WHQ1229...  fake\n",
+       "2   03_18__walking_and_outside_surprised__22UBC0BS...  fake\n",
+       "3               23_24__kitchen_pan__YR5OVD4S_face.png  fake\n",
+       "4   06_25__outside_talking_still_laughing__MI9BDQ7...  fake\n",
+       "5       13_02__secret_conversation__PLNVLO74_face.png  fake\n",
+       "6       24_19__podium_speech_happy__OF8LF68K_face.png  fake\n",
+       "7             27_02__hugging_happy__UGO2181S_face.png  fake\n",
+       "8       20_14__podium_speech_happy__B014BKVO_face.png  fake\n",
+       "9   12_07__walking_and_outside_surprised__0VN0A2T3...  fake\n",
+       "10      07_03__talking_angry_couch__WPT3Z2KN_face.png  fake\n",
+       "11     04_21__talking_against_wall__NRI4PHWP_face.png  fake\n",
+       "12            03_07__hugging_happy__BKLOCI1M_face.png  fake\n",
+       "13  21_02__outside_talking_still_laughing__Z0XHPQA...  fake\n",
+       "14          14_20__exit_phone_room__B014BKVO_face.png  fake\n",
+       "15            20_14__hugging_happy__B014BKVO_face.png  fake\n",
+       "16  03_14__walking_down_street_outside_angry__H0VQ...  fake\n",
+       "17  01_27__outside_talking_pan_laughing__S2YCUY48_...  fake\n",
+       "18  03_07__walking_and_outside_surprised__IFSURI9X...  fake\n",
+       "19              07_03__kitchen_pan__PWXXULHR_face.png  fake\n",
+       "20      07_03__podium_speech_happy__IFSURI9X_face.png  fake\n",
+       "21  14_13__walking_outside_cafe_disgusted__KMQ3AW6...  fake\n",
+       "22  21_07__walking_down_indoor_hall_disgust__MKU99...  fake\n",
+       "23  06_12__outside_talking_pan_laughing__3K21NFNM_...  fake\n",
+       "24            07_03__hugging_happy__IFSURI9X_face.png  fake\n",
+       "25                   27__podium_speech_happy_face.png  real\n",
+       "26  15_02__outside_talking_pan_laughing__I8G2LWD1_...  fake\n",
+       "27      20_26__podium_speech_happy__1UEDQ3GY_face.png  fake\n",
+       "28            13_25__hugging_happy__7YMTAF29_face.png  fake\n",
+       "29              03_15__kitchen_pan__5C1OMK8W_face.png  fake"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(os.path.join(FACES_FOLDER, \"faces.csv\"))"
+   ]
   }
  ],
  "metadata": {
