--- a/inference-gradio.ipynb
+++ b/inference-gradio.ipynb
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/espasa/anaconda3/envs/pytorch/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import gradio as gr\n",
     "import torch\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +79,14 @@
     "    num_classes=1,\n",
     "    device=DEVICE\n",
     ")\n",
-    "model.load_state_dict(torch.load('./models/resnetinceptionv1_final.pth'))\n",
+    "\n",
+    "use_checkpoint = True\n",
+    "\n",
+    "if use_checkpoint:\n",
+    "    checkpoint = torch.load('./models/resnetinceptionv1_epoch_32.pth')\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "else:\n",
+    "    model.load_state_dict(torch.load('./models/resnetinceptionv1_final.pth'))\n",
     "model.to(DEVICE)\n",
     "model.eval()\n",
     "print(\"MTCNN & Classfier models loaded\")"
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +109,16 @@
     "        'label': label\n",
     "    }\n",
     "    examples.append(example)\n",
-    "# np.random.shuffle(examples) # shuffle"
+    "np.random.shuffle(examples) # shuffle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(input_image:Image.Image):\n",
+    "def predict(input_image:Image.Image, true_label:str):\n",
     "    \"\"\"Predict the label of the input_image\"\"\"\n",
     "    face = mtcnn(input_image)\n",
     "    if face is None:\n",
@@ -127,21 +143,18 @@
     "            'real': real_prediction,\n",
     "            'fake': fake_prediction\n",
     "        }\n",
-    "    return confidences, face_image_to_plot\n"
+    "    return confidences, true_label, face_image_to_plot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True label: fake\n",
-      "Predicted label: real\n",
-      "\n",
       "True label: fake\n"
      ]
     },
@@ -157,45 +170,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted label: real\n",
+      "Predicted label: fake\n",
       "\n",
       "True label: fake\n",
+      "Predicted label: fake\n",
+      "\n",
+      "True label: real\n",
       "Predicted label: real\n",
       "\n",
-      "True label: fake\n",
+      "True label: real\n",
       "Predicted label: real\n",
       "\n",
-      "True label: fake\n",
+      "True label: real\n",
       "Predicted label: real\n",
       "\n",
-      "True label: fake\n",
-      "Predicted label: real\n",
-      "\n",
-      "True label: fake\n",
-      "Predicted label: real\n",
-      "\n",
-      "True label: fake\n",
-      "Predicted label: real\n",
-      "\n",
-      "True label: fake\n",
-      "Predicted label: real\n",
-      "\n",
-      "True label: fake\n",
+      "True label: real\n",
       "Predicted label: real\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    example = examples[8]\n",
+    "for i in range(6):\n",
+    "    example = examples[i]\n",
     "    example_img = example['path']\n",
     "    example_label = example['label']\n",
     "\n",
     "    print(f\"True label: {example_label}\")\n",
     "\n",
     "    example_img = Image.open(example_img)\n",
-    "    confidences, _ = predict(example_img)\n",
+    "    confidences, _, _ = predict(example_img, example_label)\n",
     "    if confidences['real'] > 0.5:\n",
     "        print(\"Predicted label: real\")\n",
     "    else:\n",
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7874/\n",
+      "Running on local URL:  http://127.0.0.1:7861/\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -235,7 +239,7 @@
        "        <iframe\n",
        "            width=\"900\"\n",
        "            height=\"500\"\n",
-       "            src=\"http://127.0.0.1:7874/\"\n",
+       "            src=\"http://127.0.0.1:7861/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -243,30 +247,26 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa9b420deb0>"
+       "<IPython.lib.display.IFrame at 0x7f191a6ff3d0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/espasa/anaconda3/envs/pytorch/lib/python3.8/site-packages/torch/nn/functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
-      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
-     ]
     }
    ],
    "source": [
     "interface = gr.Interface(\n",
     "    fn=predict,\n",
-    "    inputs=gr.inputs.Image(label=\"Input Image\", type=\"pil\"),\n",
+    "    inputs=[\n",
+    "        gr.inputs.Image(label=\"Input Image\", type=\"pil\"),\n",
+    "        \"text\"\n",
+    "    ],\n",
     "    outputs=[\n",
     "        gr.outputs.Label(label=\"Class\"),\n",
+    "        \"text\",\n",
     "        gr.outputs.Image(label=\"Face\")\n",
     "    ],\n",
-    "    examples=[examples[i][\"path\"] for i in range(8)] # fake examples\n",
+    "    examples=[[examples[i][\"path\"], examples[i][\"label\"]] for i in range(10)] # fake examples\n",
     ").launch()"
    ]
   },
@@ -283,9 +283,9 @@
    "hash": "1df8ca6470716aef7885428a3615d7cfcd80d77664baa0ca314c31299e302aab"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pytorch')",
+   "display_name": "PyTorch",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,9 +298,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
