Saving some examples of videos of the dataset

--- a/dataset/create_face_dataset.ipynb
+++ b/dataset/create_face_dataset.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on device: cuda:0\n"
+      "Running on device: cpu\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,12 +121,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "ORIGINAL_VIDEOS = os.listdir(ORIGINAL_VIDEOS_FOLDER)\n",
     "FAKE_VIDEOS = os.listdir(FAKE_VIDEOS_FOLDER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save some examples of videos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_EXAMPLES = 20\n",
+    "\n",
+    "fake_idx = 0\n",
+    "while fake_idx < NUM_EXAMPLES:\n",
+    "    fake_video = cv2.VideoCapture(os.path.join(FAKE_VIDEOS_FOLDER, FAKE_VIDEOS[fake_idx]))\n",
+    "    fake_video.set(cv2.CAP_PROP_POS_FRAMES, 60) # skip first 60 frames\n",
+    "    _, fake_frame = fake_video.read()\n",
+    "    # fake_frame = cv2.cvtColor(fake_frame, cv2.COLOR_BGR2RGB)\n",
+    "    cv2.imwrite(os.path.join('../examples/', f'fake_frame_{fake_idx}.jpg'), fake_frame)\n",
+    "    fake_idx += 1\n",
+    "\n",
+    "real_idx = 0\n",
+    "while real_idx < NUM_EXAMPLES:\n",
+    "    real_video = cv2.VideoCapture(os.path.join(ORIGINAL_VIDEOS_FOLDER, ORIGINAL_VIDEOS[real_idx]))\n",
+    "    real_video.set(cv2.CAP_PROP_POS_FRAMES, 60) # skip first 60 frames\n",
+    "    _, real_frame = real_video.read()\n",
+    "    # real_frame = cv2.cvtColor(real_frame, cv2.COLOR_BGR2RGB)\n",
+    "    cv2.imwrite(os.path.join('../examples/', f'real_frame_{real_idx}.jpg'), real_frame)\n",
+    "    real_idx += 1\n",
+    "\n",
+    "# plt.imshow(fake_frame)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -656,10 +693,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "1df8ca6470716aef7885428a3615d7cfcd80d77664baa0ca314c31299e302aab"
+   "hash": "70876cdcfe169b991766b3b6fc1c26dc5a770678ea7f06db3355d725f5c5506d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pytorch')",
+   "display_name": "Python 3.9.7 ('torch4arm')",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
